--- a/client/src/index.css
+++ b/client/src/index.css
@@ -87,7 +87,7 @@ header a {
   color: var(--light);
 }
 
-button {
+/* button {
   font-size: 1rem;
   text-decoration: none;
   padding: 0.25rem 1rem;
@@ -97,7 +97,7 @@ button {
   cursor: pointer;
   margin: 0 1px;
   background-color: var(--secondary);
-}
+} */
 
 button:hover {
   opacity: .8;
