--- a/client/src/components/Cart/style.css
+++ b/client/src/components/Cart/style.css
@@ -37,7 +37,7 @@
   right: 1%;
   font-size: 2rem;
   cursor: pointer;
-  background-color: var(--secondary);
+  background-color: white;
   border-radius: 50%;
   padding: .25rem;
   width: 50px;
