--- a/client/src/index.css
+++ b/client/src/index.css
@@ -83,7 +83,7 @@ a:hover {
 }
 
 header {
-  background: blue;
+  background: #00C0FF;
 }
 
 header a {
@@ -218,6 +218,30 @@ input:focus {
 
 .category-container{
   margin-bottom: 80px;
+}
+
+.TechX-title {
+  background: linear-gradient(-45deg, #0703FF, #0040FF, #0080FF, #00C0FF, #03F9FF);
+	background-size: 300%;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: 400;
+	font-size: 4vw;
+	letter-spacing: -5px;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	animation: animated_text 10s ease-in-out infinite;
+	-moz-animation: animated_text 10s ease-in-out infinite;
+	-webkit-animation: animated_text 10s ease-in-out infinite;
+}
+
+@keyframes animated_text {
+	0% { background-position: 0px 50%; }
+	50% { background-position: 100% 50%; }
+	100% { background-position: 0px 50%; }
+}
+
+.main-link {
+  color: white;
 }
 
 @media screen and (max-width: 768px) {
